--- a/workshops/building-applicaiton-with-ai/recipe-app/package.json
+++ b/workshops/building-applicaiton-with-ai/recipe-app/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "test": "jest"
+    "test": "jest",
+    "e2e": "playwright test"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
